--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-zz  
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 * {
@@ -44,6 +43,15 @@ header nav ul li a {
     width: 1200px;
     max-width: 100%;
     margin: 0 auto;
+}
+
+.btn-primary {
+    padding: 10px 30px;
+    background-color: #00796B;
+    color: #fff;
+    text-transform: uppercase;
+    display: inline-block;
+    text-decoration: none;
 }
 
 main {
@@ -130,9 +138,16 @@ main h1 {
 }
 
 .contato form input:not([type="radio"]):not([type="checkbox"]),
-.contato form textarea {
+.contato form textarea,
+.contato form select {
     width: 100%;
     padding: 5px;
+}
+
+.contato form input:not([type="radio"]):not([type="checkbox"]):focus,
+.contato form textarea:focus,
+.contato form select:focus {
+    outline-color: #00796B;
 }
 
 .contato form fieldset {
